# TinyTelematics

./: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: client-test.yml
aws/lambda/telematics-etl/: lambda_function.py
aws/resources/: trips_ddl.sql
config/: default.yaml
docs/: architecture.md  development_setup.md
flink/: .gitignore  .scalafmt.conf  README.md  build.sbt
flink/sql/: aggregate_trips.sql  trips_ddl.sql
flink/src/main/resources/: application.conf
flink/src/main/scala/com/chollinger/telematics/: Job.scala  Sinks.scala  Sources.scala
flink/src/main/scala/com/chollinger/telematics/config/: Config.scala
flink/src/main/scala/com/chollinger/telematics/model/: GpsModel.scala
flink/src/test/scala/com/chollinger/telematics/model/: GpsModelTest.scala
jupyter/: Visualize_Geospatial_Data_with_Python.ipynb
lambda/telematics-input/: deploy_venv.sh  lambda_function.py
resources/: GraphHopper.csv  GraphHopper.gpx  GraphHopper.nmea  GraphHopperCoordinates.csv  README.md  analyze.sql  output.nmea
sbin/: fake_gpsd.sh  init.sh  run_client.sh  setup_gps.sh
sbin/ubx/: G7020-KT
spark/: build.sbt
src/main/scala/com/otterinasuit/spark/sensorlog/main/: Main.scala
system/: gpsd  tiny-telematics.service
tests/: test_tiny_telematics.py
tiny_telematics/: config.py  main.py  model.py
zeppelin/: Telematics.json
